--- a/ansible.yml
+++ b/ansible.yml
@@ -1,12 +1,14 @@
 - hosts: all
   become: true
-  tasks: 
-     - name: delete old deployment
-       command: kubectl delete -f /home/ubuntu/Deployment.yml
-     - name: delete old service
-       command: kubectl delete -f /home/ubuntu/Service.yml
-     - name: create new deployment
-       command: kubectl apply -f /home/ubuntu/Deployment.yml
-     - name: create new service
-       command: kubectl apply -f /home/ubuntu/Service.yml
-       
+  tasks:
+    - name: Delete old deployment (ignore error if not present)
+      shell: KUBECONFIG=/home/ubuntu/.kube/config kubectl delete -f /home/ubuntu/Deployment.yml || true
+
+    - name: Delete old service (ignore error if not present)
+      shell: KUBECONFIG=/home/ubuntu/.kube/config kubectl delete -f /home/ubuntu/Service.yml || true
+
+    - name: Apply new deployment
+      shell: KUBECONFIG=/home/ubuntu/.kube/config kubectl apply -f /home/ubuntu/Deployment.yml
+
+    - name: Apply new service
+      shell: KUBECONFIG=/home/ubuntu/.kube/config kubectl apply -f /home/ubuntu/Service.yml
