--- a/ansible.yml
+++ b/ansible.yml
@@ -1,10 +1,8 @@
 - hosts: all
   become: true
   tasks:
-     - name: update kubeconfig
-       command: aws eks update-kubeconfig --region ap-south-1 --name cluster 
-     - name: kubectl
-       command: ls && cat ~/.kube/config
+     - name: 
+       command: kubectl get nodes
      - name: delete old deployment
        command: kubectl delete -f /home/ubuntu/Deployment.yml
      - name: delete old service
