--- a/ansible.yml
+++ b/ansible.yml
@@ -1,13 +1,13 @@
-- hosts: all
-  become: true
+- hosts: localhost
+  connection: local
   tasks:
-     - name: 
-       command: kubectl get nodes
-     - name: delete old deployment
-       command: kubectl delete -f /home/ubuntu/Deployment.yml
-     - name: delete old service
-       command: kubectl delete -f /home/ubuntu/Service.yml
-     - name: create new deployment
-       command: kubectl apply -f /home/ubuntu/Deployment.yml
-     - name: create new service
-       command: kubectl apply -f /home/ubuntu/Service.yml
+    - name: update kubeconfig
+      command: aws eks update-kubeconfig --region ap-south-1 --name cluster 
+    - name: delete old deployment
+      command: kubectl delete -f /home/ubuntu/Deployment.yml
+    - name: delete old service
+      command: kubectl delete -f /home/ubuntu/Service.yml
+    - name: create new deployment
+      command: kubectl apply -f /home/ubuntu/Deployment.yml
+    - name: create new service
+      command: kubectl apply -f /home/ubuntu/Service.yml
